Bug 442701 - Exporting in Story Board docker when there is no scene in it crashes Krita
Summary: Exporting in Story Board docker when there is no scene in it crashes Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-19 15:05 UTC by Tyson Tan
Modified: 2021-09-27 20:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2021-09-19 15:05:52 UTC
Exporting in Story Board docker when there is no scene in it crashes Krita.
Comment 1 Halla Rempt 2021-09-19 15:22:29 UTC
Is this that got fixed in the storyboard work recently? If so -- I guess that work should be backported to krita/5.0?
Comment 2 Tyson Tan 2021-09-19 15:24:30 UTC
I don't think so? I was testing this using:
krita-5.1.0-prealpha-7699e8a-x86_64.appimage
Comment 3 Tyson Tan 2021-09-22 01:47:43 UTC
Now with krita-5.0.0-beta1-0986afa-x86_64.appimage
Krita always crashes no matter what when exporting from Story Board docker.
Comment 4 Eoin O'Neill 2021-09-22 22:20:43 UTC
Git commit a3676628e37fc612e5014368400b6af0f6cabf27 by Eoin O'Neill.
Committed on 22/09/2021 at 22:20.
Pushed by eoinoneill into branch 'master'.

Storyboard exporting no longer possible when there's no content.

The button shouldn't be clickable when there's no storyboard
content to export -- it just wouldn't make a lot of sense that
way!

M  +11   -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp
M  +5    -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.h

https://invent.kde.org/graphics/krita/commit/a3676628e37fc612e5014368400b6af0f6cabf27
Comment 5 Eoin O'Neill 2021-09-22 22:20:51 UTC
Git commit 2a5950456bcde2b0fe55557ff8512612b3edfe3f by Eoin O'Neill.
Committed on 22/09/2021 at 22:18.
Pushed by eoinoneill into branch 'master'.

Fix crash when trying to export storyboard without scenes.

We also prevent the export window from opening at all when there's no
storyboard content available now. Lastly, in the odd chance the window
does open, we make sure it won't crash due to divide by zero.

We will disable the export button to reflect that this isn't
possible when there's nothing to export in a later commit.

M  +3    -3    plugins/dockers/storyboarddocker/DlgExportStoryboard.cpp
M  +2    -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp

https://invent.kde.org/graphics/krita/commit/2a5950456bcde2b0fe55557ff8512612b3edfe3f
Comment 6 Eoin O'Neill 2021-09-22 22:21:45 UTC
Thanks for reporting the bug Tyson. It should be solved in the nightly now.
Comment 7 Tyson Tan 2021-09-23 00:55:22 UTC
Thank you Eoin! :D
Comment 8 Eoin O'Neill 2021-09-27 20:30:25 UTC
Git commit 35edfb69d7891fc70ee7fb6358dce8e4b3a82091 by Eoin O'Neill.
Committed on 27/09/2021 at 20:15.
Pushed by eoinoneill into branch 'krita/5.0'.

Storyboard exporting no longer possible when there's no content.

The button shouldn't be clickable when there's no storyboard
content to export -- it just wouldn't make a lot of sense that
way!
(cherry picked from commit a3676628e37fc612e5014368400b6af0f6cabf27)

M  +11   -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp
M  +5    -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.h

https://invent.kde.org/graphics/krita/commit/35edfb69d7891fc70ee7fb6358dce8e4b3a82091
Comment 9 Eoin O'Neill 2021-09-27 20:30:33 UTC
Git commit 1641fe316e875b413f0321735740ab329cec7019 by Eoin O'Neill.
Committed on 27/09/2021 at 20:14.
Pushed by eoinoneill into branch 'krita/5.0'.

Fix crash when trying to export storyboard without scenes.

We also prevent the export window from opening at all when there's no
storyboard content available now. Lastly, in the odd chance the window
does open, we make sure it won't crash due to divide by zero.

We will disable the export button to reflect that this isn't
possible when there's nothing to export in a later commit.
(cherry picked from commit 2a5950456bcde2b0fe55557ff8512612b3edfe3f)

M  +3    -3    plugins/dockers/storyboarddocker/DlgExportStoryboard.cpp
M  +2    -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp

https://invent.kde.org/graphics/krita/commit/1641fe316e875b413f0321735740ab329cec7019